--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/bcrypt": "^5.0.0",
     "@types/node": "^20.1.3",
+    "@types/sharp": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "dotenv": "^16.0.3",
     "prisma": "^4.14.0",
@@ -27,6 +28,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
     "fastify": "^4.17.0",
+    "sharp": "^0.32.6",
     "zod": "^3.21.4"
   },
   "author": "Flavio",
